--- a/trunk/ddscanner/app/src/main/res/layout/review_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/review_item.xml
@@ -58,7 +58,10 @@
                         android:orientation="horizontal" />
                 </LinearLayout>
                 <ImageView
+                    android:visibility="gone"
                     android:id="@+id/overflow"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
