--- a/trunk/ddscanner/app/src/main/res/menu/menu_comment.xml
+++ b/trunk/ddscanner/app/src/main/res/menu/menu_comment.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <item
-        android:id="@+id/action_add_favourite"
+        android:id="@+id/comment_edit"
         android:orderInCategory="100"
         android:title="@string/comment_edit" />
 
     <item
-        android:id="@+id/action_play_next"
+        android:id="@+id/comment_delete"
         android:orderInCategory="101"
         android:title="@string/comment_delete" />
 </menu>
