--- a/trunk/ddscanner/app/src/main/res/layout/activity_city.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_city.xml
@@ -1,107 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/city_toolbar" />
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/place_sliding_tabs"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        style="@style/tabLayout"
-        android:layout_height="wrap_content"
-        android:background="@color/primary"
-        app:tabMode="scrollable" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/place_view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</LinearLayout>
+        <include layout="@layout/city_toolbar" />
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/place_sliding_tabs"
+            style="@style/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/primary"
+            app:tabMode="scrollable" />
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/place_view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
     <ProgressBar
-        android:layout_marginTop="105dp"
         android:id="@+id/request_progress"
         style="?android:attr/progressBarStyleHorizontal"
-        android:indeterminateOnly="true"
+        android:layout_width="match_parent"
+        android:layout_height="18dp"
+        android:layout_marginTop="105dp"
         android:background="@android:color/transparent"
-        android:progressTint="@color/primary"
+        android:indeterminateOnly="true"
         android:indeterminateTint="@color/primary"
         android:indeterminateTintMode="src_in"
-        android:layout_width="match_parent"
-        android:visibility="gone"
-        android:layout_height="18dp" />
+        android:progressTint="@color/primary"
+        android:visibility="gone" />
+
     <RelativeLayout
         android:id="@+id/toast"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:gravity="center">
-    <TextView
-        android:layout_marginTop="123dp"
-        android:layout_width="250dp"
-        android:layout_height="30dp"
         android:gravity="center"
-        android:textSize="16sp"
-        android:background="@drawable/border"
-        android:text="Please zoom in to see dive spots"/>
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="250dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="123dp"
+            android:background="@drawable/border"
+            android:gravity="center"
+            android:text="Please zoom in to see dive spots"
+            android:textSize="16sp" />
     </RelativeLayout>
+
     <android.support.design.widget.FloatingActionButton
-        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        app:elevation="3dp"
         android:layout_margin="20dp"
         android:src="@drawable/ic_filter"
+        android:visibility="gone"
         app:backgroundTint="@color/orange"
-        app:pressedTranslationZ="12dp"/>
+        app:elevation="3dp"
+        app:pressedTranslationZ="12dp" />
 
     <android.support.design.widget.FloatingActionButton
-        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        app:elevation="3dp"
         android:layout_margin="20dp"
         android:src="@drawable/ic_feedback"
+        android:visibility="gone"
         app:backgroundTint="@color/white"
-        app:pressedTranslationZ="12dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        app:elevation="3dp"
+        app:pressedTranslationZ="12dp" />
 
     <RelativeLayout
-        android:layout_marginLeft="10dp"
-        android:layout_alignParentBottom="true"
         android:layout_width="40dp"
         android:layout_height="80dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginBottom="16dp"
-        android:visibility="gone"
-        >
+        android:layout_marginLeft="10dp"
+        android:visibility="gone">
 
         <ImageButton
-            android:layout_centerHorizontal="true"
             android:id="@+id/filterButton"
-            android:src="@drawable/ic_filter"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@drawable/top_border" />
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/top_border"
+            android:src="@drawable/ic_filter" />
 
         <ImageButton
+            android:id="@+id/feedbackFloat"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_below="@+id/filterButton"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="1dp"
-            android:id="@+id/feedbackFloat"
-            android:layout_below="@+id/filterButton"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_feedback"
-            android:background="@drawable/bottom_border"/>
+            android:background="@drawable/bottom_border"
+            android:src="@drawable/ic_feedback" />
     </RelativeLayout>
 
 </RelativeLayout>
