--- a/trunk/ddscanner/app/src/main/res/layout/activity_slider.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_slider.xml
@@ -13,7 +13,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="57dp"
-            android:layout_toLeftOf="@+id/close_btn"
+            android:layout_toLeftOf="@+id/options"
             android:orientation="horizontal">
             <ImageView
                 android:id="@+id/user_avatar"
@@ -45,6 +45,13 @@
                     tools:text= "21 may 2016, 20:37"/>
             </LinearLayout>
         </LinearLayout>
+        <ImageView
+            android:layout_toLeftOf="@+id/close_btn"
+            android:id="@+id/options"
+            android:layout_width="30dp"
+            android:layout_height="57dp"
+            android:src="@drawable/ic_ac_more"
+            android:scaleType="center"/>
         <ImageView
             android:id="@+id/close_btn"
             android:layout_width="wrap_content"
