--- a/trunk/ddscanner/app/src/main/res/layout/activity_all_photos.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_all_photos.xml
@@ -1,34 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <include layout="@layout/view_toolbar"/>
-    <android.support.design.widget.TabLayout
-        android:id="@+id/photos_tab_layout"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        style="@style/tabLayout"
-        android:background="@color/white"
-        app:tabMode="fixed"/>
+
+        <include layout="@layout/view_toolbar" />
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/photos_tab_layout"
+            style="@style/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:background="@color/white"
+            app:tabMode="fixed" />
     </android.support.design.widget.AppBarLayout>
-    <android.support.v4.view.ViewPager
+
+    <com.rey.material.widget.ProgressView
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:layout_marginLeft="4dp"
-        android:layout_marginTop="7dp"
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:layout_marginTop="50dp"
+        app:pv_autostart="true"
+        app:pv_circular="true"
+        app:pv_progressMode="indeterminate"
+        android:visibility="gone"
+        app:pv_progressStyle="@style/CircularProgress" />
+
+    <android.support.v4.view.ViewPager
+        android:visibility="visible"
         android:id="@+id/photos_view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="7dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_add_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:backgroundTint="@color/orange"
-        android:src="@drawable/ic_acb_plus"
         android:layout_gravity="bottom|end"
-        android:layout_margin="20dp"/>
+        android:layout_margin="20dp"
+        android:src="@drawable/ic_acb_plus"
+        app:backgroundTint="@color/orange" />
 </android.support.design.widget.CoordinatorLayout>
