--- a/trunk/ddscanner/app/src/main/res/layout/view_no_spots.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_no_spots.xml
@@ -21,6 +21,7 @@
             android:gravity="center"
             android:textSize="20sp"
             android:layout_marginTop="20dp"
+            android:fontFamily="sans-serif-medium"
             android:textColor="@color/black_text"
             android:text="@string/no_results"/>
         <Button
@@ -29,6 +30,6 @@
             android:layout_width="190dp"
             android:layout_height="wrap_content"
             style="@style/OrangeButtons"
-            android:text="@string/add_manually"/>
+            android:text="@string/add_new"/>
     </LinearLayout>
 </ScrollView>
