--- a/trunk/ddscanner/app/src/main/res/layout/fragment_maplist.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_maplist.xml
@@ -162,9 +162,31 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="15dp"
                 android:gravity="center"
-                android:text="Sorry! There are no spots here"
-                android:textColor="#939393"
-                android:textSize="18sp" />
+                android:text="There are no dive spots here"
+                android:textColor="@color/black_text"
+                android:fontFamily="sans-serif-medum"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/subtext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/text"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:gravity="center"
+                android:text="There are no dive spots here"
+                android:layout_marginTop="5dp"
+                android:textSize="15sp" />
+            <Button
+                android:visibility="visible"
+                android:id="@+id/showMapContinue"
+                android:layout_below="@+id/subtext"
+                android:layout_width="200dp"
+                android:layout_marginTop="174dp"
+                android:layout_height="wrap_content"
+                style="@style/OrangeButtons"
+                android:text="continue"/>
         </RelativeLayout>
     </RelativeLayout>
 
