--- a/trunk/ddscanner/app/src/main/res/layout/activity_no_location_providers.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_no_location_providers.xml
@@ -15,7 +15,6 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:src="@drawable/ic_nolocation" />
-
         <TextView
             android:id="@+id/text"
             android:layout_width="263dp"
@@ -24,10 +23,21 @@
             android:layout_centerHorizontal="true"
             android:gravity="center"
             android:layout_marginTop="16dp"
-            android:text="@string/error_turn_on_location_provider"
+            android:text="@string/can_not_locate"
+            android:fontFamily="sans-serif-medium"
             android:textColor="@color/black_text"
+            android:textSize="20sp" />
+        <TextView
+            android:id="@+id/subtext"
+            android:layout_width="263dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:layout_marginTop="5dp"
+            android:text="@string/error_turn_on_location_provider"
             android:fontFamily="sans-serif"
-            android:textSize="16sp" />
+            android:textSize="15sp" />
 
         <Button
             android:id="@+id/btn_open_settings"
