--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -98,6 +98,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/likeLayout"
                         android:layout_width="94dp"
                         android:layout_height="42dp"
                         android:layout_marginLeft="13dp"
@@ -117,6 +118,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/dislikeLayout"
                         android:layout_width="94dp"
                         android:layout_height="42dp"
                         android:background="@drawable/border_gray_100px"
