* errors message when like dislike self review

--- a/trunk/ddscanner/app/src/main/res/layout/activity_add_photos_to_dive_spot.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_add_photos_to_dive_spot.xml
@@ -16,5 +16,5 @@
         android:layout_height="45dp"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/border_button_orange_2px"
-        android:text="SHARE"/>
+        android:text="@string/add_photos_to_dive_spot"/>
 </LinearLayout>
