--- a/trunk/ddscanner/app/src/main/res/layout/activity_search_sealife.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_search_sealife.xml
@@ -29,24 +29,36 @@
         android:id="@+id/not_found_layout"
         android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:gravity="center">
+        <ImageView
+            android:id="@+id/icon"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_nosealife"/>
         <TextView
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/icon"
             android:id="@+id/text_not_found"
             android:layout_gravity="center"
             android:layout_width="match_parent"
             android:gravity="center"
-            android:layout_height="216dp"
-            android:textSize="16sp"
+            android:layout_height="wrap_content"
+            android:text="@string/no_results"
+            android:textSize="20sp"
+            android:fontFamily="sans-seif-medium"
             android:textColor="@color/black_text"
             />
         <Button
+            android:layout_marginTop="170dp"
             android:layout_below="@+id/text_not_found"
             android:id="@+id/add_manualy"
             android:layout_width="180dp"
             android:layout_height="45dp"
-            android:text="@string/add_manually"
+            android:text="ADD NEW"
+            style="@style/OrangeButtons"
             android:textSize="15sp"
-            android:background="@drawable/border_button_orange_2px"
             android:layout_centerInParent="true" />
     </RelativeLayout>
     <android.support.v7.widget.RecyclerView
