--- a/trunk/ddscanner/app/src/main/res/layout/activity_add_sealife.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_add_sealife.xml
@@ -30,7 +30,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_alignParentTop="true"
                     android:layout_margin="10dp"
-                    android:background="@drawable/ic_delete_newsealife"
+                    android:background="@drawable/ic_del_circle"
                     android:visibility="gone" />
 
                 <RelativeLayout
@@ -44,7 +44,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
-                        android:src="@drawable/ic_plus_addds" />
+                        android:src="@drawable/ic_addds_plus" />
 
                     <TextView
                         android:layout_width="wrap_content"
