* guide thanks layout

--- a/trunk/ddscanner/app/src/main/res/layout/activity_guide_description.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_guide_description.xml
@@ -51,6 +51,7 @@
             android:orientation="vertical"
             android:gravity="center_horizontal">
             <TextView
+                android:id="@+id/titleUseful"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#959595"
