--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -173,7 +173,7 @@
                         android:layout_height="57dp"
                         android:layout_toRightOf="@+id/ic_layout_check_in"
                         android:gravity="center"
-                        android:text="No people check in here"
+                        android:text="@string/no_one_has_checked_in_here"
                         android:textColor="@color/primary"
                         android:textSize="15sp" />
 
