--- a/trunk/ddscanner/app/src/main/res/layout/fragment_maplist.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_maplist.xml
@@ -162,7 +162,7 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="15dp"
                 android:gravity="center"
-                android:text="There are no dive spots here"
+                android:text="@string/there_are_no_dive_spots_here"
                 android:textColor="@color/black_text"
                 android:fontFamily="sans-serif-medum"
                 android:textSize="20sp" />
@@ -175,7 +175,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:gravity="center"
-                android:text="There are no dive spots here"
+                android:text="@string/please_choose_another_location"
                 android:layout_marginTop="5dp"
                 android:textSize="15sp" />
             <Button
