--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -478,11 +478,13 @@
                             <TextView
                                 android:id="@+id/name_title"
                                 style="@style/AddDsCharTitleStyle"
+                                android:textColor="#B2B2B2"
                                 android:layout_height="wrap_content"
                                 android:text="@string/full_name" />
 
                             <TextView
                                 android:id="@+id/name_count"
+                                android:visibility="gone"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentRight="true"
@@ -536,12 +538,14 @@
 
                             <TextView
                                 android:id="@+id/about_title"
+                                android:textColor="#B2B2B2"
                                 style="@style/AddDsCharTitleStyle"
                                 android:layout_height="wrap_content"
                                 android:text="@string/about" />
 
                             <TextView
                                 android:id="@+id/about_count"
+                                android:visibility="gone"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentRight="true"
