--- a/trunk/ddscanner/app/src/main/res/values/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values/styles.xml
@@ -215,14 +215,14 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">20dp</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/black_text</item>
+        <item name="android:textColor">#B2B2B2</item>
     </style>
 
     <style name="SealifeCharachteristicValue">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">5dp</item>
-        <item name="android:textColor">#8b8b8b</item>
+        <item name="android:textColor">@color/black_text</item>
         <item name="android:textSize">14sp</item>
     </style>
 
