--- a/trunk/ddscanner/app/src/main/res/layout/view_no_notifications.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_no_notifications.xml
@@ -4,11 +4,11 @@
     android:id="@+id/noNotificationsView"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:gravity="center"
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
+        android:layout_marginTop="100dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_nonotif"/>
