--- a/trunk/ddscanner/app/src/main/res/layout/activity_filter.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_filter.xml
@@ -8,6 +8,16 @@
 
     <include layout="@layout/view_toolbar" />
 
+    <com.rey.material.widget.ProgressView
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_marginTop="25dp"
+        android:layout_height="25dp"
+        app:pv_autostart="true"
+        app:pv_circular="true"
+        app:pv_progressMode="indeterminate"
+        app:pv_progressStyle="@style/CircularProgress" />
+
     <!--<RelativeLayout-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="70dp"-->
@@ -42,7 +52,12 @@
             <!--android:checked="true"-->
             <!--android:theme="@style/Color1SwitchStyle" />-->
     <!--</RelativeLayout>-->
-
+    <LinearLayout
+        android:id="@+id/main_layout"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -110,5 +125,5 @@
         android:background="@color/orange"
         android:text="@string/btn_save"
         app:rd_style="@style/Material.Drawable.Ripple.Touch.MatchView" />
-
+    </LinearLayout>
 </LinearLayout>
