--- a/trunk/ddscanner/app/src/main/res/layout/view_no_spots.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_no_spots.xml
@@ -16,13 +16,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_nospots"/>
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="20sp"
-            android:layout_marginTop="20dp"
-            android:fontFamily="sans-serif-medium"
-            android:textColor="@color/black_text"
+            style="@style/ErrorsViewTitleStyle"
             android:text="@string/no_results"/>
         <Button
             android:id="@+id/add_spot"
