--- a/trunk/ddscanner/app/src/main/res/layout/view_no_location_found.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_no_location_found.xml
@@ -16,12 +16,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_nolocation"/>
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="20sp"
-            android:layout_marginTop="20dp"
-            android:textColor="@color/black_text"
+            style="@style/ErrorsViewTitleStyle"
             android:text="@string/no_results"/>
     </LinearLayout>
 </ScrollView>
