--- a/trunk/ddscanner/app/src/main/res/layout/fragment_maplist.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_maplist.xml
@@ -201,12 +201,16 @@
         android:visibility="gone">
 
         <TextView
-            android:layout_width="250dp"
+            android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_marginTop="15dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:background="@drawable/border"
             android:gravity="center"
-            android:text="Please zoom in to see dive spots"
+            android:text="@string/please_zoom_in_to_request_dive_spots"
             android:textSize="16sp" />
     </RelativeLayout>
 
